# ultraprocessed

./: .dockerignore  .gitattributes  .gitignore  README.md
.github/workflows/: build-image.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  db.py  main.py  models.py
backend/app/api/v1/: __init__.py  auth.py  consumption.py  dashboard.py  export.py  fasting.py  food_images.py  foods.py  ha.py  openfoodfacts.py  targets.py
backend/app/services/: nutrients.py
custom_components/ultraprocessed/: __init__.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/ultraprocessed/translations/: en.json
dashboard/: .gitignore  .npmrc  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: app.css  app.html
dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte
deploy/: .env.example  backup.sh  compose.prod.yml  docker-compose.yml  install-backups.sh  redeploy.sh
deploy/k8s/: cloudflare-tunnel.example.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
docs/: architecture.md  deploy-k3s.md  deploy.md  design.md  motion.md  operations.md  phase1-verification.md  phase2-verification.md
homeassistant/: README.md  hacs.json
homeassistant/custom_components/ultraprocessed/: binary_sensor.py  config_flow.py
(+115 files in other folders)
